--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,5 @@
 name: Feature request
-about: Suggest an idea for this project
-title: ""
+title: "[FEATURE] "
 type: feature
 assignees:
   - lemonpole
